--- a/templates/links.html
+++ b/templates/links.html
@@ -3,6 +3,6 @@
 {% block title %}Accueil{% endblock %}
 
 {% block content %}
-    <h1>Bienvenue sur la page d'accueil</h1>
-    <p>Ceci est une page de présentation.</p>
+    <h1>Bienvenue sur la page des liens</h1>
+    <p>voici les liens utiles (j'espère)</p>
 {% endblock %}
