--- a/templates/pres_inter.html
+++ b/templates/pres_inter.html
@@ -3,6 +3,6 @@
 {% block title %}Accueil{% endblock %}
 
 {% block content %}
-    <h1>Bienvenue sur la page d'accueil</h1>
+    <h1>Bienvenue sur la page des intervenants</h1>
     <p>Ceci est une page de présentation.</p>
 {% endblock %}
