start styling the site

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Flask App{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
+
 <body>
     <div class="container">
+      <div class="header">
         <div class="nav-buttons">
-            <a href="/">Présentation colloc</a>
-            <a href="/pres_inter">Présentaiton intervenants</a>
-            <a href="/links">liens utiles</a>
+            <a href="/">Présentation colloque</a>
+            <a href="/pres_inter">Présentation intervenants</a>
+            <a href="/links">Liens utiles</a>
         </div>
+        <div class="title">
+            <H1> Colloque AgroBioTech </H1>
+        </div>
+      </div>
+
         {% block content %}{% endblock %}
     </div>
 </body>
+
 </html>
