--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,34 @@
+
+
+.header {
+  margin-top: 2%;
+  display: flex;
+  background-color: rgb(0, 90, 135);
+}
+
 .nav-buttons {
-    margin-top: 20px;
+    display: flex;
+    align-items: center;
 }
 
 .nav-buttons a {
     text-decoration: none;
     margin: 5px;
     padding: 10px 20px;
-    background-color: #007BFF;
-    color: white;
+    color: rgb(230, 230, 230);
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+.title {
+  margin-left: 10%;
+  color: rgb(230, 230, 230);
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+body {
+  background-color: rgb(210, 224, 253);
+  margin: 0;
 }
