--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,7 @@
   margin-left: 10%;
   color: rgb(230, 230, 230);
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 20px;
 }
 
 body {
