--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,8 @@
 }
 
 .title {
-  margin-left: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
   color: rgb(230, 230, 230);
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 20px;
