--- a/templates/pres_inter.html
+++ b/templates/pres_inter.html
@@ -1,8 +1,58 @@
+
 {% extends 'base.html' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Présentation des Intervenants{% endblock %}
 
 {% block content %}
-    <h1>Bienvenue sur la page des intervenants</h1>
-    <p>Ceci est une page de présentation.</p>
+<section class="content-section">
+    <h2>Présentation des Intervenants</h2>
+    <div class="intervenants-list">
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+        <div class="intervenant">
+            <h3> ??? </h3>
+            <p>Reveal à venir...</p>
+        </div>
+
+    </div>
+</section>
 {% endblock %}
+
