--- a/templates/pres_inter.html
+++ b/templates/pres_inter.html
@@ -8,48 +8,36 @@
     <h2>Présentation des Intervenants</h2>
     <div class="intervenants-list">
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Agnès Ricroch </h3>
+            <p>Secrétaire de la Section Sciences de la Vie chez Academie d'Agriculture de France</p>
         </div>
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Jean-Philipe Combier </h3>
+            <p>Cofondateur et conseiller scientifique, Micropep - Directeur de recherche, CNRS</p>
         </div>
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Annabelle Déjardin </h3>
+            <p>Co-responsable de l'équipe GFP2 (Génomique Fonctionnelle, des Populations et Prédiction) de l'UMR BioForA</p>
         </div>
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Hervé Chneiweiss </h3>
+            <p>Neurologue, neuroscientifique, Directeur de recherche au CNRS et praticien hospitalier à La Salpétrière (AP-HP)</p>
         </div>
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Luc Estebanez </h3>
+            <p>Chargé de recherche (CNRS), Interfaces cerveau-machine et neuroprothèses. </p>
         </div>
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Steve Pascolo </h3>
+            <p>Cofondateur de CureVac. Vaccins et thérapies à base d'ARNm - Chloroquine</p>
         </div>
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Céline Chantry-Darmon </h3>
+            <p> Genomic Data Scientist chez Sonio Prompt engineering lover et Co-founder of the Petit Grain de Femmes association.</p>
         </div>
         <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
-        </div>
-        <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
-        </div>
-        <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
-        </div>
-        <div class="intervenant">
-            <h3> ??? </h3>
-            <p>Reveal à venir...</p>
+            <h3> Morgan Meyer </h3>
+            <p>Directeur de recherche à Mines ParisTech et chercheur associé au LISIS. </p>
         </div>
 
     </div>
