--- a/templates/links.html
+++ b/templates/links.html
@@ -7,8 +7,11 @@
 <section class="content-section">
     <h2>Liens Utiles</h2>
     <ul class="links-list">
-        <li><a href="https://www.agroparistech.fr/" target="_blank">Site officiel d'AgroParisTech</a></li>
         <li><a href="https://www.agroparistech.fr/sites/default/files/media/2024-04/palaiseau_-_plan_dacces.pdf" target="_blank">Plan AgroParisTech</a></li>
+        <li><a href="https://www.linkedin.com/in/association-agrobiotech-6b772a2a7/" target="_blank">Linkedin du colloque</a></li>
+        <li><a href=" https://www.helloasso.com/associations/agrobiotech-l-association-des-biotechnologistes-d-agroparistech/evenements/billetterie-colloque-agrobiotech-6-fevrier-2025" target="_blank">Billeterie du colloque (C'est gratuit promis)</a></li>
+        <li><a href="https://www.instagram.com/colloqueagrobiotech" target="_blank">Page Instagram du colloque</a></li>
+        <li><a href="https://www.agroparistech.fr/" target="_blank">Site officiel d'AgroParisTech</a></li>
         <li><a href="https://www.inra.fr/" target="_blank">Institut National de la Recherche Agronomique (INRAE)</a></li>
         <li><a href="https://github.com/DamienFUSTER/Colloc-Application" target="_blank">Page GitHub du site</a></li>
     </ul>
